welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: ')' expected but integer literal found.
	if (you >= 8 && and you <= 10) {
                                   ^dateFashion:13: error: illegal start of simple expression
} 
^